src/test/ui/resolve/export-fully-qualified.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `foo`
  --> $DIR/export-fully-qualified.rs:6:20
   |
LL |     pub fn bar() { foo::baz(); }
   |                    ^^^ use of undeclared crate or module `foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
